--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@reduxjs/toolkit": "^2.5.1",
+    "@types/react-modal": "^3.16.3",
     "@types/swiper": "^5.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-modal": "^3.16.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "sass": "^1.83.4",
