--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ dist-ssr
 *.local
 .env.production
 .env.development
-
+package-lock.json
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
