--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@reduxjs/toolkit": "^2.5.1",
     "@types/react-modal": "^3.16.3",
     "@types/swiper": "^5.4.3",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
@@ -31,6 +33,7 @@
     "@types/node": "^22.13.1",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/react-leaflet": "^2.8.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
